<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">


  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_selectplace"
        android:textSize="18sp"></TextView>

    <TextView
        android:id="@+id/explain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/select2"></TextView>
  
<!--  <CheckBox
      android:id="@+id/checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" /> -->

    <ListView
        android:id="@+id/point_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center_horizontal">-->
        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_customize_3"
            android:text="@string/bt_back"
            android:textColor="#FFFFFF"></Button>
        <Button
            android:id="@+id/bt_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_customize_3"
            android:text="@string/bt_go"
            android:textColor="#FFFFFF"></Button>
    <!--</LinearLayout>-->
</RelativeLayout>