<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">


    
    <TextView
        android:id="@+id/touroku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:text="@string/touroku" />
    
    <TextView
        android:id="@+id/name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:text="@string/name" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="名前を入力してください" />
    
    
<!-- <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:text="@string/sex" />
    
    <RadioGroup
        android:id="@+id/sex1"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal" >
       	<RadioButton
       	    android:id="@+id/radio_button1"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/radio_button1" />
       	<RadioButton
       	    android:id="@+id/radio_button2"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/radio_button2" />
    </RadioGroup>-->
  
    
    <TextView
        android:id="@+id/user_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_ID"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="新規IDを入力してください" />
    
    
    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left"
        android:background="@drawable/button_customize_3"
        android:text="@string/bt_back"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/bt_tou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:background="@drawable/button_customize_3"
        android:text="@string/tou"
        android:textColor="#FFFFFF"/>
    
</LinearLayout>