<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/tv_selectplace"
      android:textSize="18sp"></TextView>

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"></TextView>

    <Spinner
        android:id="@+id/sp_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sp_place"></Spinner>

  <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_customize_3"
        android:layout_alignParentLeft="true"
        android:text="@string/bt_back"
        android:textColor="#FFFFFF"></Button>
    <Button
        android:id="@+id/bt_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_customize_3"
        android:text="@string/bt_go"
        android:textColor="#FFFFFF"></Button>
  </RelativeLayout>
</LinearLayout>