<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        android:layout_gravity="center" />


    
<!--    <TextView
        android:id="@+id/st_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:text="@string/st_login2" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="IDを入力してください" />-->
    <ImageView
        android:id="@+id/guide_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
        android:id="@+id/memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/memo"
        android:textSize="15sp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="340dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/memo2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/camera"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/watch"
        android:background="@drawable/button_customize_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:id="@+id/watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/look"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:background="@drawable/button_customize_3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />







    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@drawable/button_customize_3"
        android:text="@string/map"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/button_customize_3"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    
</RelativeLayout>