<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        android:layout_gravity="center" />
    
<!--    <TextView
        android:id="@+id/st_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:text="@string/st_login2" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="IDを入力してください" />-->


    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/camera"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/upload"
        android:background="@drawable/button_customize_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        <!--android:background="@drawable/button_customize" />-->

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/upload"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:background="@drawable/button_customize_3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
        <!--android:background="@drawable/button_customize"/>-->

    <TextView
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:textSize="20sp"
        android:layout_gravity="left"
        android:layout_marginTop="350dp"
        android:text="@string/explain" />




    <TextView
        android:id="@+id/explain2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="50dp" />


    <!--<ImageView-->
        <!--android:id="@+id/photo_image"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@null"-->
        <!--android:contentDescription="@string/desc_image" />-->

    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@drawable/button_customize_3"
        android:text="@string/map"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true" />
        <!--android:background="@drawable/button_customize"/>-->
    
</RelativeLayout>